--- a/config/studio_evaluation.toml
+++ b/config/studio_evaluation.toml
@@ -5,7 +5,10 @@ description = "Evaluating a model with attention distance mask"
 
 [data]
 data_dir = "/data/atlas/users/spshenov/ml_input_data"
-data_file = "trackml_short_10to50_tracks_5k_events.csv"
+# trackml_tiny_10to50tracks_100events.csv
+# trackml_short_10to50_tracks_5k_events.csv
+# trackml_10to50tracks_40kevents.csv
+data_file = "trackml_tiny_10to50tracks_100events.csv"
 
 
 [model]
