--- a/config/evaluation.toml
+++ b/config/evaluation.toml
@@ -38,3 +38,23 @@ level = "INFO"
 [wandb]
 entity = "spshenov-university-of-amsterdam"
 project_name = "transformer_for_particle_tracking"
+
+[bin_ranges.log_p]
+min = -3
+max = 5
+step = 0.5
+
+[bin_ranges.theta]
+min = 0
+max = 3.141592653589793
+step = 0.3141592653589793
+
+[bin_ranges.q]
+min = -2
+max = 1
+step = 1
+
+[bin_ranges.sin_phi]
+min = -1
+max = 1
+step = 0.2
