--- a/config/studio_evaluation.toml
+++ b/config/studio_evaluation.toml
@@ -45,3 +45,8 @@ metric_goal = "maximize"  # or 'minimize'
 [sweep.parameters]
 min_cl_size = {values = [5]}
 min_samples = {values = [3, 4]}
+
+[bin_ranges.q]
+min = -1.5
+max = 1.5
+step = 1
