--- a/config/studio_evaluation.toml
+++ b/config/studio_evaluation.toml
@@ -50,3 +50,18 @@ min_samples = {values = [3, 4]}
 min = -1.5
 max = 1.5
 step = 1
+
+[bin_ranges.log_p]
+min = -3
+max = 5
+step = 0.5
+
+[bin_ranges.theta]
+min = 0
+max = 3.141592
+step = 0.314
+
+[bin_ranges.sin_phi]
+min = -1
+max = 1
+step = 0.2
