adding functionality to use attention masking and config for it

--- a/config/studio_evaluation.toml
+++ b/config/studio_evaluation.toml
@@ -12,6 +12,7 @@ data_file = "trackml_tiny_10to50tracks_100events.csv"
 
 
 [model]
+# checkpoint_path = "/data/atlas/users/spshenov/studio/trained_models/20241028_194927_great-spoonbill-of-refinement_train/model_best.pth"
 checkpoint_path = "/data/atlas/users/spshenov/trained_models/models_5_features_600epochs/model_trackml_10to50_best.pth"
 num_encoder_layers = 6
 d_model = 32
@@ -21,6 +22,7 @@ output_size = 5
 dim_feedforward = 128
 dropout = 0.1
 use_flash_attention = false
+use_att_mask = false
 
 
 [training]
