--- a/config/evaluation.toml
+++ b/config/evaluation.toml
@@ -14,7 +14,8 @@ num_classes = 451
 
 
 [model]
-checkpoint_path = "/data/atlas/users/spshenov/trained_models/models_5_features_600epochs/model_trackml_10to50_best.pth"
+# checkpoint_path = "/data/atlas/users/spshenov/trained_models/models_5_features_600epochs/model_trackml_10to50_best.pth"
+checkpoint_path = "/data/atlas/users/spshenov/trained_models/20241028_203934_bronze-reindeer-of-serenity_train/model_best.pth"
 num_encoder_layers = 6
 d_model = 32
 n_head = 4
@@ -23,7 +24,7 @@ output_size = 5
 dim_feedforward = 128
 dropout = 0.1
 use_flash_attention = false
-use_att_mask = false
+use_att_mask = true
 
 
 [training]
