--- a/config/studio_training.toml
+++ b/config/studio_training.toml
@@ -24,7 +24,7 @@ output_size = 5
 dim_feedforward = 128
 dropout = 0.1
 use_flash_attention = false
-use_att_mask = false
+use_att_mask = true
 
 [training]
 batch_size = 64
