--- a/config/training.toml
+++ b/config/training.toml
@@ -20,7 +20,7 @@ output_size = 5
 dim_feedforward = 128
 dropout = 0.1
 use_flash_attention = false
-use_att_mask = true
+use_att_mask = false
 
 [training]
 batch_size = 64
