--- a/config/evaluation.toml
+++ b/config/evaluation.toml
@@ -16,7 +16,7 @@ num_classes = 451
 
 [model]
 # checkpoint_path = "/data/atlas/users/spshenov/trained_models/models_5_features_600epochs/model_trackml_10to50_best.pth"
-checkpoint_path = "/data/atlas/users/spshenov/trained_models/20241030_223721_scrupulous-lionfish-of-chaos_train/model_best.pth"
+checkpoint_path = "/data/atlas/users/spshenov/trained_models/20241031_121534_humongous-cat-of-sympathy_train/model_best.pth"
 num_encoder_layers = 6
 d_model = 32
 n_head = 4
@@ -25,7 +25,7 @@ output_size = 5
 dim_feedforward = 128
 dropout = 0.1
 use_flash_attention = false
-use_att_mask = true
+use_att_mask = false
 
 
 [training]
