--- a/config/studio_evaluation.toml
+++ b/config/studio_evaluation.toml
@@ -22,7 +22,7 @@ output_size = 5
 dim_feedforward = 128
 dropout = 0.1
 use_flash_attention = false
-use_att_mask = true
+use_att_mask = false
 
 
 [training]
