--- a/config/studio_evaluation.toml
+++ b/config/studio_evaluation.toml
@@ -53,15 +53,15 @@ min = -1.5
 max = 1.5
 step = 1
 
-[bin_ranges.log_p]
-min = -3
+[bin_ranges.pt]
+min = 0
 max = 5
 step = 0.5
 
-[bin_ranges.theta]
+[bin_ranges.eta]
 min = 0
-max = 3.141592
-step = 0.314
+max = 4
+step = 0.5
 
 [bin_ranges.sin_phi]
 min = -1
