--- a/config/studio_evaluation.toml
+++ b/config/studio_evaluation.toml
@@ -12,8 +12,8 @@ data_file = "trackml_tiny_10to50tracks_100events.csv"
 
 
 [model]
-checkpoint_path = "/data/atlas/users/spshenov/trained_models/models427epochs/model_trackml_10to50_best"
-# checkpoint_path = "/data/atlas/users/spshenov/trained_models/20241104_120903_orthodox-elegant-bloodhound_train/model_best.pth"
+# checkpoint_path = "/data/atlas/users/spshenov/trained_models/models427epochs/model_trackml_10to50_best"
+checkpoint_path = "/data/atlas/users/spshenov/trained_models/20241104_120903_orthodox-elegant-bloodhound_train/model_best.pth"
 num_encoder_layers = 6
 d_model = 32
 n_head = 4
