--- a/config/training.toml
+++ b/config/training.toml
@@ -16,11 +16,11 @@ num_encoder_layers = 6
 d_model = 32
 n_head = 4
 input_size = 3
-output_size = 5
+output_size = 4
 dim_feedforward = 128
 dropout = 0.1
 use_flash_attention = false
-use_att_mask = false
+use_att_mask = true
 
 [training]
 batch_size = 64
