--- a/config/training.toml
+++ b/config/training.toml
@@ -41,11 +41,11 @@ epoch_log_interval = 10
 model_save_interval = 30
 
 [wandb]
-entity = "spshenov-university-of-amsterdam"
-project_name = "transformer_for_particle_tracking"
 watch_interval = 50
 
 [sweep]
+entity = "spshenov-university-of-amsterdam"
+project = "transformer_for_particle_tracking"
 method = "grid"
 
 [sweep.metric]
