--- a/config/evaluation.toml
+++ b/config/evaluation.toml
@@ -9,7 +9,7 @@ data_dir = "/data/atlas/users/spshenov/ml_input_data"
 # trackml_short_10to50_tracks_5k_events.csv
 # trackml_10to50tracks_40kevents.csv
 # trackml_200to500tracks_40kevents.csv
-data_file = "trackml_10to50tracks_40kevents.csv"
+data_file = "trackml_200to500tracks_40kevents.csv"
 dataloader_num_workers = 4
 num_classes = 451
 
@@ -27,10 +27,8 @@ dropout = 0.1
 use_flash_attention = false
 use_att_mask = false
 
-
 [training]
 batch_size = 64
-
 
 [output]
 base_path = "/data/atlas/users/spshenov/evaluation"
@@ -49,14 +47,14 @@ method = "grid"  # or 'random', 'bayes'
 name = "test/event score"
 goal = "maximize"
 
-[sweep.parameters.use_att_mask]
-values = [false]
+[sweep.parameters.use_flash_attention]
+values = [true, false]
 
 [sweep.parameters.min_cl_size]
 values = [5]
 
 [sweep.parameters.min_samples]
-values = [3, 4]
+values = [3]
 
 [bin_ranges.q]
 min = -1.5
