--- a/config/training.toml
+++ b/config/training.toml
@@ -8,7 +8,8 @@ data_dir = "/data/atlas/users/spshenov/ml_input_data"
 # trackml_tiny_10to50tracks_100events.csv
 # trackml_short_10to50_tracks_5k_events.csv
 # trackml_10to50tracks_40kevents.csv
-data_file = "trackml_10to50tracks_40kevents.csv"
+# trackml_200to500tracks_40kevents.csv
+data_file = "trackml_200to500tracks_40kevents.csv"
 dataloader_num_workers = 4
 
 [model]
@@ -20,17 +21,17 @@ output_size = 4
 dim_feedforward = 128
 dropout = 0.1
 use_flash_attention = false
-use_att_mask = true
+use_att_mask = false
 
 [training]
 batch_size = 64
-total_epochs = 660
+total_epochs = 500
 shuffle = false # whether training data should be shuffled
 start_from_scratch = true
-default_lr = 4e-4
+default_lr = 1e-3
 
 [training.early_stopping]
-patience = 60
+patience = 50
 
 [output]
 base_path = "/data/atlas/users/spshenov/trained_models"
