--- a/config/studio_evaluation.toml
+++ b/config/studio_evaluation.toml
@@ -9,12 +9,15 @@ data_dir = "/data/atlas/users/spshenov/ml_input_data"
 # trackml_short_10to50_tracks_5k_events.csv
 # trackml_10to50tracks_40kevents.csv
 # trackml_200to500tracks_40kevents.csv
-data_file = "trackml_tiny_10to50tracks_100events.csv"
+data_file = "trackml_10to50tracks_40kevents.csv"
 
 
 [model]
-checkpoint_path = "/data/atlas/users/spshenov/trained_models/models427epochs/model_trackml_10to50_best"
+checkpoint_path = "/data/atlas/users/spshenov/trained_models/20241106_175638_provocative-adventurous-guppy_train/model_best.pth"
+# checkpoint_path = "/data/atlas/users/spshenov/trained_models/models427epochs/model_trackml_10to50_best"
 # checkpoint_path = "/data/atlas/users/spshenov/trained_models/20241104_120903_orthodox-elegant-bloodhound_train/model_best.pth"
+# trained model base "/data/atlas/users/spshenov/trained_models/20241107_070732_aloof-capable-terrier_train/model_best.pth"
+# trained model w/ att mask "/data/atlas/users/spshenov/trained_models/20241106_175638_provocative-adventurous-guppy_train/model_best.pth"
 num_encoder_layers = 6
 d_model = 32
 n_head = 4
