--- a/config/training.toml
+++ b/config/training.toml
@@ -24,7 +24,7 @@ use_flash_attention = false
 use_att_mask = false
 
 [training]
-batch_size = 64
+batch_size = 32
 total_epochs = 500
 shuffle = false # whether training data should be shuffled
 start_from_scratch = true
@@ -54,4 +54,4 @@ name = "train/validation loss"
 goal = "minimize"
 
 [sweep.parameters.use_att_mask]
-values = [true, false]
+values = [false]
