--- a/config/evaluation.toml
+++ b/config/evaluation.toml
@@ -9,7 +9,8 @@ data_dir = "/data/atlas/users/spshenov/ml_input_data"
 # trackml_short_10to50_tracks_5k_events.csv
 # trackml_10to50tracks_40kevents.csv
 # trackml_200to500tracks_40kevents.csv
-data_file = "trackml_10to50tracks_40kevents.csv"
+# trackml_2to10vertices.csv
+data_file = "trackml_2to10vertices.csv"
 dataloader_num_workers = 4
 num_classes = 451
 
