--- a/config/evaluation.toml
+++ b/config/evaluation.toml
@@ -1,7 +1,7 @@
 # example toml
 [experiment]
 name = "Transformer with attention distance"
-description = "Evaluating a model with attention distance mask"
+description = "Trying base 10-50 model on vertices data 2-10"
 
 [data]
 data_dir = "/data/atlas/users/spshenov/ml_input_data"
@@ -10,7 +10,7 @@ data_dir = "/data/atlas/users/spshenov/ml_input_data"
 # trackml_10to50tracks_40kevents.csv
 # trackml_200to500tracks_40kevents.csv
 # trackml_2to10vertices.csv
-data_file = "trackml_10to50tracks_40kevents.csv"
+data_file = "trackml_2to10vertices.csv"
 dataloader_num_workers = 4
 num_classes = 451
 
