--- a/config/training.toml
+++ b/config/training.toml
@@ -1,7 +1,7 @@
 # Configuration toml
 [experiment]
 name = "Transformer with attention distance"
-description = "Training a model with attention distance mask"
+description = "Training model on vertex data"
 
 [data]
 data_dir = "/data/atlas/users/spshenov/ml_input_data"
@@ -9,7 +9,7 @@ data_dir = "/data/atlas/users/spshenov/ml_input_data"
 # trackml_short_10to50_tracks_5k_events.csv
 # trackml_10to50tracks_40kevents.csv
 # trackml_200to500tracks_40kevents.csv
-data_file = "trackml_10to50tracks_40kevents.csv"
+data_file = "trackml_2to10vertices.csv"
 dataloader_num_workers = 4
 
 [model]
